# pep_2_testcase

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/pep2testcase/cli/: main.py  ui.py
src/pep2testcase/core/: config.py  graph.py  llm.py  middleware.py  schema.py  state.py
src/pep2testcase/core/agents/: researcher.py  tester.py
src/pep2testcase/core/agents/researcher/: __init__.py  node.py  prompts.py
src/pep2testcase/core/agents/tester/: __init__.py  node.py
src/pep2testcase/core/agents/tools/: __init__.py  fetcher.py  search.py
src/pep2testcase/core/schema/: __init__.py  research.py  test.py
src/pep2testcase/core/tools/: __init__.py
tests/: conftest.py  test_basic.py
tests/agents/: test_researcher.py  test_tester.py
tests/core/: test_middleware.py
tests/tools/: __init__.py  test_fetcher.py  test_search.py
